[package]
name = "blockchain-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde_json = "1.0.114"
reqwest = "0.12.3"
#surrealdb = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }
#diesel = {version =  "2.1.6" , features= ["mysql"] }
dotenv = "0.15.0"
csv = "1.3.0"
tokio = {version = "1.38.0" , features = ["full"]}
curve25519-dalek = "4.1.3"